fix - filter buttons should wrap

--- a/src/assets/style/artGallery.css
+++ b/src/assets/style/artGallery.css
@@ -8,3 +8,7 @@
     width: 500px;
 }
 
+.filterButtonGroup {
+    display: flex;
+    flex-wrap: wrap;
+}
